update pom, add jib-maven-plugin for github actions workflow fix jvmArgs